# HFT-Bot-rust

./: Cargo.toml
src/: main.rs
